wip: still not convering with full load

--- a/code/power_debug.ipynb
+++ b/code/power_debug.ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 168,
    "id": "40664d33",
    "metadata": {},
    "outputs": [],
@@ -288,6 +288,19 @@
     "                if isinstance(df, pd.DataFrame) and not df.empty:\n",
     "                    sheet_name = attr[:31]  # Excel sheet names must be <= 31 characters\n",
     "                    df.to_excel(writer, sheet_name=sheet_name)\n",
+    "    return True\n",
+    "\n",
+    "def debug_result(net, init='auto', max_iteration=100, tolerance_mva=1e-8):\n",
+    "    try:\n",
+    "        pp.runpp_3ph(\n",
+    "            net, init=init,\n",
+    "            max_iteration=max_iteration,\n",
+    "            tolerance_mva=tolerance_mva,\n",
+    "            calc_voltage_angles=True,\n",
+    "            v_debug=True\n",
+    "        )\n",
+    "    except Exception as e:\n",
+    "        return False\n",
     "    return True"
    ]
   },
@@ -345,43 +358,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 180,
    "id": "07d71cb1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5]\tConvergence rate = 99.6 %\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\pypower\\newtonpf.py:441: MatrixRankWarning: Matrix is exactly singular\n",
+      "  dx = -1 * spsolve(J, F, permc_spec=permc_spec, use_umfpack=use_umfpack)\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\pf\\create_jacobian.py:27: RuntimeWarning: invalid value encountered in divide\n",
+      "  dVm_x, dVa_x = dSbus_dV_numba_sparse(Ybus.data, Ybus.indptr, Ybus.indices, V, V / abs(V), Ibus)\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\pf\\runpp_3ph.py:468: RuntimeWarning: invalid value encountered in divide\n",
+      "  i_abc_it_wye = (np.divide(s_abc_pu, v_abc_it)).conjugate()\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\pf\\runpp_3ph.py:469: RuntimeWarning: invalid value encountered in divide\n",
+      "  i_abc_it_delta = np.matmul(i_del_xfmn, (np.divide(s_abc_delta_pu, np.matmul\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\results_bus.py:74: RuntimeWarning: invalid value encountered in divide\n",
+      "  net[\"res_bus_3ph\"][\"unbalance_percent\"] = np.abs(V012_pu[2, :]/V012_pu[1, :])*100\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\auxiliary.py:1552: RuntimeWarning: invalid value encountered in divide\n",
+      "  return np.conjugate(np.divide(S, V, out=np.zeros_like(S), where=V != 0))  # Return zero if div by zero\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\auxiliary.py:1552: RuntimeWarning: invalid value encountered in divide\n",
+      "  return np.conjugate(np.divide(S, V, out=np.zeros_like(S), where=V != 0))  # Return zero if div by zero\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10]\tConvergence rate = 83.6 %\n",
+      "[15]\tConvergence rate = 66.4 %\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\pypower\\newtonpf.py:441: MatrixRankWarning: Matrix is exactly singular\n",
+      "  dx = -1 * spsolve(J, F, permc_spec=permc_spec, use_umfpack=use_umfpack)\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\pf\\create_jacobian.py:27: RuntimeWarning: invalid value encountered in divide\n",
+      "  dVm_x, dVa_x = dSbus_dV_numba_sparse(Ybus.data, Ybus.indptr, Ybus.indices, V, V / abs(V), Ibus)\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\pf\\runpp_3ph.py:468: RuntimeWarning: invalid value encountered in divide\n",
+      "  i_abc_it_wye = (np.divide(s_abc_pu, v_abc_it)).conjugate()\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\pf\\runpp_3ph.py:469: RuntimeWarning: invalid value encountered in divide\n",
+      "  i_abc_it_delta = np.matmul(i_del_xfmn, (np.divide(s_abc_delta_pu, np.matmul\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\results_bus.py:74: RuntimeWarning: invalid value encountered in divide\n",
+      "  net[\"res_bus_3ph\"][\"unbalance_percent\"] = np.abs(V012_pu[2, :]/V012_pu[1, :])*100\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\auxiliary.py:1552: RuntimeWarning: invalid value encountered in divide\n",
+      "  return np.conjugate(np.divide(S, V, out=np.zeros_like(S), where=V != 0))  # Return zero if div by zero\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\auxiliary.py:1552: RuntimeWarning: invalid value encountered in divide\n",
+      "  return np.conjugate(np.divide(S, V, out=np.zeros_like(S), where=V != 0))  # Return zero if div by zero\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\pf\\create_jacobian.py:27: RuntimeWarning: invalid value encountered in divide\n",
+      "  dVm_x, dVa_x = dSbus_dV_numba_sparse(Ybus.data, Ybus.indptr, Ybus.indices, V, V / abs(V), Ibus)\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\pypower\\newtonpf.py:441: MatrixRankWarning: Matrix is exactly singular\n",
+      "  dx = -1 * spsolve(J, F, permc_spec=permc_spec, use_umfpack=use_umfpack)\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\pf\\runpp_3ph.py:468: RuntimeWarning: invalid value encountered in divide\n",
+      "  i_abc_it_wye = (np.divide(s_abc_pu, v_abc_it)).conjugate()\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\pf\\runpp_3ph.py:469: RuntimeWarning: invalid value encountered in divide\n",
+      "  i_abc_it_delta = np.matmul(i_del_xfmn, (np.divide(s_abc_delta_pu, np.matmul\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\results_bus.py:74: RuntimeWarning: invalid value encountered in divide\n",
+      "  net[\"res_bus_3ph\"][\"unbalance_percent\"] = np.abs(V012_pu[2, :]/V012_pu[1, :])*100\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\auxiliary.py:1552: RuntimeWarning: invalid value encountered in divide\n",
+      "  return np.conjugate(np.divide(S, V, out=np.zeros_like(S), where=V != 0))  # Return zero if div by zero\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\auxiliary.py:1552: RuntimeWarning: invalid value encountered in divide\n",
+      "  return np.conjugate(np.divide(S, V, out=np.zeros_like(S), where=V != 0))  # Return zero if div by zero\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\pf\\create_jacobian.py:27: RuntimeWarning: invalid value encountered in divide\n",
+      "  dVm_x, dVa_x = dSbus_dV_numba_sparse(Ybus.data, Ybus.indptr, Ybus.indices, V, V / abs(V), Ibus)\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\pypower\\newtonpf.py:441: MatrixRankWarning: Matrix is exactly singular\n",
+      "  dx = -1 * spsolve(J, F, permc_spec=permc_spec, use_umfpack=use_umfpack)\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\pf\\runpp_3ph.py:468: RuntimeWarning: invalid value encountered in divide\n",
+      "  i_abc_it_wye = (np.divide(s_abc_pu, v_abc_it)).conjugate()\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\pf\\runpp_3ph.py:469: RuntimeWarning: invalid value encountered in divide\n",
+      "  i_abc_it_delta = np.matmul(i_del_xfmn, (np.divide(s_abc_delta_pu, np.matmul\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\results_bus.py:74: RuntimeWarning: invalid value encountered in divide\n",
+      "  net[\"res_bus_3ph\"][\"unbalance_percent\"] = np.abs(V012_pu[2, :]/V012_pu[1, :])*100\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\auxiliary.py:1552: RuntimeWarning: invalid value encountered in divide\n",
+      "  return np.conjugate(np.divide(S, V, out=np.zeros_like(S), where=V != 0))  # Return zero if div by zero\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\auxiliary.py:1552: RuntimeWarning: invalid value encountered in divide\n",
+      "  return np.conjugate(np.divide(S, V, out=np.zeros_like(S), where=V != 0))  # Return zero if div by zero\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20]\tConvergence rate = 32.6 %\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\pf\\create_jacobian.py:27: RuntimeWarning: invalid value encountered in divide\n",
+      "  dVm_x, dVa_x = dSbus_dV_numba_sparse(Ybus.data, Ybus.indptr, Ybus.indices, V, V / abs(V), Ibus)\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\pypower\\newtonpf.py:441: MatrixRankWarning: Matrix is exactly singular\n",
+      "  dx = -1 * spsolve(J, F, permc_spec=permc_spec, use_umfpack=use_umfpack)\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\pf\\runpp_3ph.py:468: RuntimeWarning: invalid value encountered in divide\n",
+      "  i_abc_it_wye = (np.divide(s_abc_pu, v_abc_it)).conjugate()\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\pf\\runpp_3ph.py:469: RuntimeWarning: invalid value encountered in divide\n",
+      "  i_abc_it_delta = np.matmul(i_del_xfmn, (np.divide(s_abc_delta_pu, np.matmul\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\results_bus.py:74: RuntimeWarning: invalid value encountered in divide\n",
+      "  net[\"res_bus_3ph\"][\"unbalance_percent\"] = np.abs(V012_pu[2, :]/V012_pu[1, :])*100\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\auxiliary.py:1552: RuntimeWarning: invalid value encountered in divide\n",
+      "  return np.conjugate(np.divide(S, V, out=np.zeros_like(S), where=V != 0))  # Return zero if div by zero\n",
+      "c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandapower\\auxiliary.py:1552: RuntimeWarning: invalid value encountered in divide\n",
+      "  return np.conjugate(np.divide(S, V, out=np.zeros_like(S), where=V != 0))  # Return zero if div by zero\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[25]\tConvergence rate = 31.2 %\n",
+      "[30]\tConvergence rate = 13.8 %\n",
+      "[35]\tConvergence rate = 8.0 %\n",
+      "[40]\tConvergence rate = 3.8 %\n",
+      "[45]\tConvergence rate = 4.2 %\n",
+      "[50]\tConvergence rate = 0.0 %\n"
+     ]
+    }
+   ],
    "source": [
-    "N = 1000\n",
-    "success = 0\n",
-    "for i in range(N):\n",
-    "    sample_loads = loads_df.sample(15)\n",
+    "N = 500\n",
+    "batch = list(range(5, 51, 5))\n",
+    "for b in batch:\n",
+    "    success = 0\n",
+    "    for i in range(N):\n",
+    "        sample_loads = loads_df.sample(b)\n",
     "\n",
+    "        net.asymmetric_load.drop(net.asymmetric_load.index, inplace=True)\n",
+    "        load_map = {}\n",
+    "        for _, row in sample_loads.iterrows():\n",
+    "            # print(_, '->', row)\n",
+    "            bus_id = math.floor(row['Bus'])\n",
+    "            pa = qa = pb = qb = pc = qc = 0\n",
+    "            if (bus_id in bus_map) & (row['phases'] in {'A', 'B', 'C'}):\n",
+    "                if row['phases']=='A':\n",
+    "                    pa = row['kW']\n",
+    "                    qa = row['kW'] * np.tan(np.arccos(row['PF']))\n",
+    "                elif row['phases']=='B':\n",
+    "                    pb = row['kW']\n",
+    "                    qb = row['kW'] * np.tan(np.arccos(row['PF']))\n",
+    "                else: # row['phases']=='C'\n",
+    "                    pc = row['kW']\n",
+    "                    qc = row['kW'] * np.tan(np.arccos(row['PF']))\n",
+    "                load = pp.create_asymmetric_load(\n",
+    "                    net, bus=bus_map[bus_id],\n",
+    "                    p_a_mw=pa / 1000, q_a_mvar=qa / 1000,\n",
+    "                    p_b_mw=pb / 1000, q_b_mvar=qb / 1000,\n",
+    "                    p_c_mw=pc / 1000, q_c_mvar=qc / 1000,\n",
+    "                    name=row['Name']\n",
+    "                )\n",
+    "                load_map[load] = row['Yearly']\n",
+    "\n",
+    "        if debug_result(net): success += 1\n",
+    "    print(f\"[{b}]\\tConvergence rate = {100 * success / N} %\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "bc4396fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load by load:\n",
+    "load_problem = []\n",
+    "\n",
+    "for _, row in loads_df.iterrows():\n",
     "    net.asymmetric_load.drop(net.asymmetric_load.index, inplace=True)\n",
-    "    load_map = {}\n",
-    "    for _, row in sample_loads.iterrows():\n",
-    "        # print(_, '->', row)\n",
-    "        bus_id = math.floor(row['Bus'])\n",
-    "        pa = qa = pb = qb = pc = qc = 0\n",
-    "        if (bus_id in bus_map) & (row['phases'] in {'A', 'B', 'C'}):\n",
-    "            if row['phases']=='A':\n",
-    "                pa = row['kW']\n",
-    "                qa = row['kW'] * np.tan(np.arccos(row['PF']))\n",
-    "            elif row['phases']=='B':\n",
-    "                pb = row['kW']\n",
-    "                qb = row['kW'] * np.tan(np.arccos(row['PF']))\n",
-    "            else: # row['phases']=='C'\n",
-    "                pc = row['kW']\n",
-    "                qc = row['kW'] * np.tan(np.arccos(row['PF']))\n",
-    "            load = pp.create_asymmetric_load(\n",
-    "                net, bus=bus_map[bus_id],\n",
-    "                p_a_mw=pa / 1000, q_a_mvar=qa / 1000,\n",
-    "                p_b_mw=pb / 1000, q_b_mvar=qb / 1000,\n",
-    "                p_c_mw=pc / 1000, q_c_mvar=qc / 1000,\n",
-    "                name=row['Name']\n",
-    "            )\n",
-    "            load_map[load] = row['Yearly']\n",
+    "    \n",
+    "    # print(_, '->', row)\n",
+    "    bus_id = math.floor(row['Bus'])\n",
+    "    pa = qa = pb = qb = pc = qc = 0\n",
+    "    if (bus_id in bus_map) & (row['phases'] in {'A', 'B', 'C'}):\n",
+    "        if row['phases']=='A':\n",
+    "            pa = row['kW']\n",
+    "            qa = row['kW'] * np.tan(np.arccos(row['PF']))\n",
+    "        elif row['phases']=='B':\n",
+    "            pb = row['kW']\n",
+    "            qb = row['kW'] * np.tan(np.arccos(row['PF']))\n",
+    "        else: # row['phases']=='C'\n",
+    "            pc = row['kW']\n",
+    "            qc = row['kW'] * np.tan(np.arccos(row['PF']))\n",
+    "        load = pp.create_asymmetric_load(\n",
+    "            net, bus=bus_map[bus_id],\n",
+    "            p_a_mw=pa / 1000, q_a_mvar=qa / 1000,\n",
+    "            p_b_mw=pb / 1000, q_b_mvar=qb / 1000,\n",
+    "            p_c_mw=pc / 1000, q_c_mvar=qc / 1000,\n",
+    "            name=row['Name']\n",
+    "        )\n",
+    "    if not debug_result(net): load_problem.append(row['Name'])\n",
     "\n",
-    "    if export_results(\"batch_network_results.xlsx\", net, max_iteration=50): success += 1\n",
-    "success / N"
+    "load_problem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "c1c2b136",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = False\n",
+    "if not a: print(a)"
    ]
   },
   {
