refactor: rearranging files

--- a/code/notebooks/power_run2.ipynb
+++ b/code/notebooks/power_run2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,8 @@
     "import numpy as np\n",
     "import os, math\n",
     "\n",
-    "data_dir = 'Modified_116_LV_CSV'"
+    "data_dir = 'Modified_116_LV_CSV'\n",
+    "main_dir = os.path.abspath(os.path.join(os.path.abspath(\"\"), \"..\"))"
    ]
   },
   {
