--- a/notebooks/simulations.ipynb
+++ b/notebooks/simulations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 101,
    "id": "9ea239db",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 103,
    "id": "c6e4ae45",
    "metadata": {},
    "outputs": [
@@ -40,31 +40,41 @@
    "source": [
     "net = from_json(os.path.join(main_dir, 'json_networks', 'no_load_network.json'))\n",
     "net45 = from_json(os.path.join(main_dir, 'json_networks', '45_loads_network.json'))\n",
-    "net54 = from_json(os.path.join(main_dir, 'json_networks', '54_loads_network.json'))\n",
+    "net48 = from_json(os.path.join(main_dir, 'json_networks', '48_loads_network.json'))\n",
     "net_far = from_json(os.path.join(main_dir, 'json_networks', 'farthest_load_network.json'))\n",
     "\n",
-    "print(hc_violation(net), hc_violation(net45), hc_violation(net54), hc_violation(net_far))"
+    "print(hc_violation(net), hc_violation(net45), hc_violation(net48), hc_violation(net_far))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 104,
    "id": "4cd5c920",
    "metadata": {},
    "outputs": [],
    "source": [
     "pp.runpp_3ph(net, max_iteration=100, tolerance_mva=1e-8, calculate_voltage_angles=True)\n",
     "pp.runpp_3ph(net45, max_iteration=100, tolerance_mva=1e-8, calculate_voltage_angles=True)\n",
-    "# pp.runpp_3ph(net54, max_iteration=100, tolerance_mva=1e-8, calculate_voltage_angles=True)\n",
+    "pp.runpp_3ph(net48, max_iteration=100, tolerance_mva=1e-8, calculate_voltage_angles=True)\n",
     "pp.runpp_3ph(net_far, max_iteration=100, tolerance_mva=1e-8, calculate_voltage_angles=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 118,
    "id": "3f5c993c",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p_a_mw    0\n",
+      "p_b_mw    0\n",
+      "p_c_mw    0\n",
+      "dtype: int64\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -183,21 +193,32 @@
        "max      1.050470    1.050470    1.050470    0.000000    0.000000    0.000000"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print((net.res_bus_3ph.loc[:, ['p_a_mw', 'p_b_mw', 'p_c_mw']] > 0).sum())\n",
     "net.res_bus_3ph.loc[:, ['vm_a_pu', 'vm_b_pu', 'vm_c_pu', 'p_a_mw', 'p_b_mw', 'p_c_mw']].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 117,
    "id": "b086d7d1",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p_a_mw    16\n",
+      "p_b_mw    15\n",
+      "p_c_mw    14\n",
+      "dtype: int64\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -239,63 +260,63 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>1.084410</td>\n",
-       "      <td>0.933138</td>\n",
-       "      <td>1.108701</td>\n",
+       "      <td>1.085407</td>\n",
+       "      <td>0.931751</td>\n",
+       "      <td>1.109036</td>\n",
        "      <td>-0.000029</td>\n",
        "      <td>-0.000044</td>\n",
-       "      <td>-0.000027</td>\n",
+       "      <td>-0.000026</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.004286</td>\n",
-       "      <td>0.011271</td>\n",
-       "      <td>0.006124</td>\n",
-       "      <td>0.001836</td>\n",
-       "      <td>0.001906</td>\n",
+       "      <td>0.004414</td>\n",
+       "      <td>0.011450</td>\n",
+       "      <td>0.006077</td>\n",
+       "      <td>0.001835</td>\n",
+       "      <td>0.001908</td>\n",
        "      <td>0.001625</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>1.050094</td>\n",
-       "      <td>0.927625</td>\n",
-       "      <td>1.049984</td>\n",
-       "      <td>-0.019363</td>\n",
-       "      <td>-0.020167</td>\n",
-       "      <td>-0.017105</td>\n",
+       "      <td>1.050095</td>\n",
+       "      <td>0.925510</td>\n",
+       "      <td>1.049983</td>\n",
+       "      <td>-0.019353</td>\n",
+       "      <td>-0.020191</td>\n",
+       "      <td>-0.017096</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>1.082792</td>\n",
-       "      <td>0.930058</td>\n",
-       "      <td>1.107140</td>\n",
+       "      <td>1.083442</td>\n",
+       "      <td>0.928530</td>\n",
+       "      <td>1.107557</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>1.083679</td>\n",
-       "      <td>0.931429</td>\n",
-       "      <td>1.108461</td>\n",
+       "      <td>1.084453</td>\n",
+       "      <td>0.930108</td>\n",
+       "      <td>1.109061</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>1.086653</td>\n",
-       "      <td>0.933766</td>\n",
-       "      <td>1.110831</td>\n",
+       "      <td>1.087741</td>\n",
+       "      <td>0.932580</td>\n",
+       "      <td>1.110815</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>1.094717</td>\n",
+       "      <td>1.096019</td>\n",
        "      <td>1.049922</td>\n",
-       "      <td>1.118707</td>\n",
+       "      <td>1.118685</td>\n",
        "      <td>0.001000</td>\n",
        "      <td>0.001000</td>\n",
        "      <td>0.001000</td>\n",
@@ -307,30 +328,41 @@
       "text/plain": [
        "          vm_a_pu     vm_b_pu     vm_c_pu      p_a_mw      p_b_mw      p_c_mw\n",
        "count  117.000000  117.000000  117.000000  117.000000  117.000000  117.000000\n",
-       "mean     1.084410    0.933138    1.108701   -0.000029   -0.000044   -0.000027\n",
-       "std      0.004286    0.011271    0.006124    0.001836    0.001906    0.001625\n",
-       "min      1.050094    0.927625    1.049984   -0.019363   -0.020167   -0.017105\n",
-       "25%      1.082792    0.930058    1.107140    0.000000    0.000000    0.000000\n",
-       "50%      1.083679    0.931429    1.108461    0.000000    0.000000    0.000000\n",
-       "75%      1.086653    0.933766    1.110831    0.000000    0.000000    0.000000\n",
-       "max      1.094717    1.049922    1.118707    0.001000    0.001000    0.001000"
+       "mean     1.085407    0.931751    1.109036   -0.000029   -0.000044   -0.000026\n",
+       "std      0.004414    0.011450    0.006077    0.001835    0.001908    0.001625\n",
+       "min      1.050095    0.925510    1.049983   -0.019353   -0.020191   -0.017096\n",
+       "25%      1.083442    0.928530    1.107557    0.000000    0.000000    0.000000\n",
+       "50%      1.084453    0.930108    1.109061    0.000000    0.000000    0.000000\n",
+       "75%      1.087741    0.932580    1.110815    0.000000    0.000000    0.000000\n",
+       "max      1.096019    1.049922    1.118685    0.001000    0.001000    0.001000"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print((net45.res_bus_3ph.loc[:, ['p_a_mw', 'p_b_mw', 'p_c_mw']] > 0).sum())\n",
     "net45.res_bus_3ph.loc[:, ['vm_a_pu', 'vm_b_pu', 'vm_c_pu', 'p_a_mw', 'p_b_mw', 'p_c_mw']].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 116,
    "id": "863fca43",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p_a_mw    17\n",
+      "p_b_mw    16\n",
+      "p_c_mw    15\n",
+      "dtype: int64\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -362,138 +394,119 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.050094</td>\n",
-       "      <td>1.049922</td>\n",
-       "      <td>1.049984</td>\n",
-       "      <td>-0.019363</td>\n",
-       "      <td>-0.020167</td>\n",
-       "      <td>-0.017105</td>\n",
+       "      <th>count</th>\n",
+       "      <td>117.000000</td>\n",
+       "      <td>117.000000</td>\n",
+       "      <td>117.000000</td>\n",
+       "      <td>117.000000</td>\n",
+       "      <td>117.000000</td>\n",
+       "      <td>117.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.094717</td>\n",
-       "      <td>0.943049</td>\n",
-       "      <td>1.118707</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.102185</td>\n",
+       "      <td>0.916383</td>\n",
+       "      <td>1.106210</td>\n",
+       "      <td>-0.000027</td>\n",
+       "      <td>-0.000048</td>\n",
+       "      <td>-0.000026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.005718</td>\n",
+       "      <td>0.013077</td>\n",
+       "      <td>0.005881</td>\n",
+       "      <td>0.001910</td>\n",
+       "      <td>0.002041</td>\n",
+       "      <td>0.001710</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.050113</td>\n",
+       "      <td>0.908782</td>\n",
+       "      <td>1.049964</td>\n",
+       "      <td>-0.020151</td>\n",
+       "      <td>-0.021621</td>\n",
+       "      <td>-0.018003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.101088</td>\n",
+       "      <td>0.912767</td>\n",
+       "      <td>1.104677</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.092064</td>\n",
-       "      <td>0.940136</td>\n",
-       "      <td>1.116544</td>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.101483</td>\n",
+       "      <td>0.914242</td>\n",
+       "      <td>1.106247</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.091771</td>\n",
-       "      <td>0.940159</td>\n",
-       "      <td>1.116591</td>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.104517</td>\n",
+       "      <td>0.917763</td>\n",
+       "      <td>1.107986</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.090781</td>\n",
-       "      <td>0.938433</td>\n",
-       "      <td>1.115257</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1.091638</td>\n",
-       "      <td>0.940170</td>\n",
-       "      <td>1.116613</td>\n",
+       "      <th>max</th>\n",
+       "      <td>1.113389</td>\n",
+       "      <td>1.049923</td>\n",
+       "      <td>1.116167</td>\n",
        "      <td>0.001000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1.090851</td>\n",
-       "      <td>0.938103</td>\n",
-       "      <td>1.115280</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1.090888</td>\n",
-       "      <td>0.937925</td>\n",
-       "      <td>1.115292</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.001000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1.088533</td>\n",
-       "      <td>0.936064</td>\n",
-       "      <td>1.113066</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1.088122</td>\n",
-       "      <td>0.936097</td>\n",
-       "      <td>1.113133</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.001000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    vm_a_pu   vm_b_pu   vm_c_pu    p_a_mw    p_b_mw    p_c_mw\n",
-       "0  1.050094  1.049922  1.049984 -0.019363 -0.020167 -0.017105\n",
-       "1  1.094717  0.943049  1.118707  0.000000  0.000000  0.000000\n",
-       "2  1.092064  0.940136  1.116544  0.000000  0.000000  0.000000\n",
-       "3  1.091771  0.940159  1.116591  0.000000  0.000000  0.000000\n",
-       "4  1.090781  0.938433  1.115257  0.000000  0.000000  0.000000\n",
-       "5  1.091638  0.940170  1.116613  0.001000  0.000000  0.000000\n",
-       "6  1.090851  0.938103  1.115280  0.000000  0.000000  0.000000\n",
-       "7  1.090888  0.937925  1.115292  0.000000  0.001000  0.000000\n",
-       "8  1.088533  0.936064  1.113066  0.000000  0.000000  0.000000\n",
-       "9  1.088122  0.936097  1.113133  0.000000  0.000000  0.000000"
+       "          vm_a_pu     vm_b_pu     vm_c_pu      p_a_mw      p_b_mw      p_c_mw\n",
+       "count  117.000000  117.000000  117.000000  117.000000  117.000000  117.000000\n",
+       "mean     1.102185    0.916383    1.106210   -0.000027   -0.000048   -0.000026\n",
+       "std      0.005718    0.013077    0.005881    0.001910    0.002041    0.001710\n",
+       "min      1.050113    0.908782    1.049964   -0.020151   -0.021621   -0.018003\n",
+       "25%      1.101088    0.912767    1.104677    0.000000    0.000000    0.000000\n",
+       "50%      1.101483    0.914242    1.106247    0.000000    0.000000    0.000000\n",
+       "75%      1.104517    0.917763    1.107986    0.000000    0.000000    0.000000\n",
+       "max      1.113389    1.049923    1.116167    0.001000    0.001000    0.001000"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "net45.res_bus_3ph.loc[:, ['vm_a_pu', 'vm_b_pu', 'vm_c_pu', 'p_a_mw', 'p_b_mw', 'p_c_mw']].head(10)"
+    "print((net48.res_bus_3ph.loc[:, ['p_a_mw', 'p_b_mw', 'p_c_mw']] > 0).sum())\n",
+    "net48.res_bus_3ph.loc[:, ['vm_a_pu', 'vm_b_pu', 'vm_c_pu', 'p_a_mw', 'p_b_mw', 'p_c_mw']].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 108,
    "id": "14ea33dd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "p_a_mw   -0.003363\n",
-       "p_b_mw   -0.005167\n",
-       "p_c_mw   -0.003105\n",
+       "p_a_mw   -0.003353\n",
+       "p_b_mw   -0.005191\n",
+       "p_c_mw   -0.003096\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,10 +517,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 113,
+   "id": "ad3c3587",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "p_a_mw   -0.003151\n",
+       "p_b_mw   -0.005621\n",
+       "p_c_mw   -0.003003\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net48.res_bus_3ph.loc[:, ['p_a_mw', 'p_b_mw', 'p_c_mw']].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
    "id": "ab75c8c8",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p_a_mw    1\n",
+      "p_b_mw    0\n",
+      "p_c_mw    0\n",
+      "dtype: int64\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -626,28 +673,19 @@
        "max      1.049993    1.049987    1.125066    0.001000    0.000000    0.000000"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print((net_far.res_bus_3ph.loc[:, ['p_a_mw', 'p_b_mw', 'p_c_mw']] > 0).sum())\n",
     "net_far.res_bus_3ph.loc[:, ['vm_a_pu', 'vm_b_pu', 'vm_c_pu', 'p_a_mw', 'p_b_mw', 'p_c_mw']].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "3c3eda31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# net45.res_bus_3ph.to_csv(os.path.join(main_dir, '45_loads_res_bus_3ph.csv'), index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 111,
    "id": "cb319e80",
    "metadata": {},
    "outputs": [
@@ -657,7 +695,7 @@
        "Text(0.5, 1.0, 'Line Resistance')"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -676,6 +714,14 @@
     "import matplotlib.pyplot as plt\n",
     "plt.hist(net.line.r_ohm_per_km, bins=30); plt.title(\"Line Resistance\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23d8d32b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
