wip: testing run_timeseries

--- a/notebooks/power_debug.ipynb
+++ b/notebooks/power_debug.ipynb
@@ -10,28 +10,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "load c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\ortools\\.libs\\zlib1.dll...\n",
-      "load c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\ortools\\.libs\\abseil_dll.dll...\n",
-      "load c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\ortools\\.libs\\utf8_validity.dll...\n",
-      "load c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\ortools\\.libs\\re2.dll...\n",
-      "load c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\ortools\\.libs\\libprotobuf.dll...\n",
-      "load c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\ortools\\.libs\\highs.dll...\n",
-      "load c:\\Users\\vitor\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\ortools\\.libs\\ortools.dll...\n",
+      "load C:\\Users\\vitor\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\ortools\\.libs\\zlib1.dll...\n",
+      "load C:\\Users\\vitor\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\ortools\\.libs\\abseil_dll.dll...\n",
+      "load C:\\Users\\vitor\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\ortools\\.libs\\utf8_validity.dll...\n",
+      "load C:\\Users\\vitor\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\ortools\\.libs\\re2.dll...\n",
+      "load C:\\Users\\vitor\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\ortools\\.libs\\libprotobuf.dll...\n",
+      "load C:\\Users\\vitor\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\ortools\\.libs\\highs.dll...\n",
+      "load C:\\Users\\vitor\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\ortools\\.libs\\ortools.dll...\n",
       "\n",
       "Created External Grid!\n",
-      "\n",
-      "\n",
       "Created Transformer!\n",
-      "\n",
-      "\n",
+      "Created Transformer Controller!\n",
       "Created Shunt!\n",
-      "\n",
-      "\n",
       "Created 117 Buses!\n",
-      "\n",
-      "\n",
       "Created 115 Lines!\n",
-      "\n",
       "\n",
       "Debugging successful!\n",
       "This pandapower network includes the following parameter tables:\n",
@@ -40,6 +32,7 @@
       "   - ext_grid (1 element)\n",
       "   - line (115 elements)\n",
       "   - trafo (1 element)\n",
+      "   - controller (1 element)\n",
       " and the following results tables:\n",
       "   - res_bus_3ph (117 elements)\n",
       "   - res_line_3ph (115 elements)\n",
@@ -68,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "0a5d8a68",
    "metadata": {},
    "outputs": [
@@ -98,17 +91,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "4d2dc24a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.int64(0)"
+       "0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "341a1e49",
    "metadata": {},
    "outputs": [],
@@ -1803,7 +1796,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
