fix: create_data_source and init run_timeseries.py

--- a/notebooks/power_debug.ipynb
+++ b/notebooks/power_debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "155653ab",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "id": "f7d9577c",
    "metadata": {},
    "outputs": [
@@ -312,6 +312,7 @@
        "   - ext_grid (1 element)\n",
        "   - line (115 elements)\n",
        "   - trafo (1 element)\n",
+       "   - controller (1 element)\n",
        " and the following results tables:\n",
        "   - res_bus_3ph (117 elements)\n",
        "   - res_line_3ph (115 elements)\n",
@@ -320,7 +321,7 @@
        "   - res_shunt_3ph (1 element)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "439a94cc",
    "metadata": {},
    "outputs": [],
@@ -1311,7 +1312,7 @@
     "    # print(_, '->', row)\n",
     "    bus_id = math.floor(row['Bus'])\n",
     "    pa = qa = pb = qb = pc = qc = 0\n",
-    "    if (bus_id in bus_map) & (row['phases'] in {'A', 'B', 'C'}):\n",
+    "    if (bus_id in net.bus.name) & (row['phases'] in {'A', 'B', 'C'}):\n",
     "        if row['phases']=='A':\n",
     "            pa = row['kW']\n",
     "            qa = row['kW'] * np.tan(np.arccos(row['PF']))\n",
@@ -1331,6 +1332,27 @@
     "        load_map[load] = row['Yearly']\n",
     "\n",
     "# export_results(\"full_network_results.xlsx\", net, init='flat', max_iteration=1000, tolerance_mva=1e-6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "24c8ea54",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net.bus[net.bus.name=='SourceBus'].index[0]"
    ]
   },
   {
