--- a/notebooks/timeseries.ipynb
+++ b/notebooks/timeseries.ipynb
@@ -796,6 +796,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "id": "ac6716cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandapower.control.controller.DERController.PQVAreas.PQArea4105"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandapower.control as ppc\n",
+    "pq_area = ppc.controller.DERController.PQVAreas.PQArea4105(variant=1)\n",
+    "type(pq_area)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 43,
    "id": "826dffc5",
    "metadata": {},
@@ -1409,6 +1432,101 @@
     "        profile_name=f\"CTRL_{net48.asymmetric_load.name.at[idx]}\", data_source=ds\n",
     "    )\n",
     "net48.controller"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10bd22b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'CTRL_LOAD13'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net48.controller.object.iloc[2].profile_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "1a081679",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CTRL_LOAD44\n",
+      "CTRL_LOAD13\n",
+      "CTRL_LOAD53\n",
+      "CTRL_LOAD39\n",
+      "CTRL_LOAD36\n",
+      "CTRL_LOAD50\n",
+      "CTRL_LOAD21\n",
+      "CTRL_LOAD43\n",
+      "CTRL_LOAD35\n",
+      "CTRL_LOAD22\n",
+      "CTRL_LOAD16\n",
+      "CTRL_LOAD33\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CTRL_LOAD51\n",
+      "CTRL_LOAD42\n",
+      "CTRL_LOAD55\n",
+      "CTRL_LOAD18\n",
+      "CTRL_LOAD41\n",
+      "CTRL_LOAD1\n",
+      "CTRL_LOAD10\n",
+      "CTRL_LOAD40\n",
+      "CTRL_LOAD47\n",
+      "CTRL_LOAD34\n",
+      "CTRL_LOAD4\n",
+      "CTRL_LOAD17\n",
+      "CTRL_LOAD25\n",
+      "CTRL_LOAD27\n",
+      "CTRL_LOAD23\n",
+      "CTRL_LOAD29\n",
+      "CTRL_LOAD14\n",
+      "CTRL_LOAD24\n",
+      "CTRL_LOAD46\n",
+      "CTRL_LOAD48\n",
+      "CTRL_LOAD2\n",
+      "CTRL_LOAD28\n",
+      "CTRL_LOAD38\n",
+      "CTRL_LOAD30\n",
+      "CTRL_LOAD8\n",
+      "CTRL_LOAD32\n",
+      "CTRL_LOAD5\n",
+      "CTRL_LOAD9\n",
+      "CTRL_LOAD11\n",
+      "CTRL_LOAD15\n",
+      "CTRL_LOAD20\n",
+      "CTRL_LOAD49\n",
+      "CTRL_LOAD7\n",
+      "CTRL_LOAD12\n",
+      "CTRL_LOAD19\n",
+      "CTRL_LOAD45\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example: get all ConstControl objects\n",
+    "for ctrl in net48.controller.object:\n",
+    "    if isinstance(ctrl, ppc.ConstControl):\n",
+    "        print(ctrl.profile_name)"
    ]
   },
   {
