fix: hc_deterministic

--- a/notebooks/simulations.ipynb
+++ b/notebooks/simulations.ipynb
@@ -26,7 +26,10 @@
     "data_dir = 'Modified_116_LV_CSV'\n",
     "\n",
     "if main_dir not in sys.path:\n",
-    "    sys.path.insert(0, main_dir)"
+    "    sys.path.insert(0, main_dir)\n",
+    "\n",
+    "# import create_basic_network as cbn\n",
+    "from pp_simu import hc_deterministic, addEV_det, addPV_det"
    ]
   },
   {
@@ -54,17 +57,6 @@
    "metadata": {},
    "source": [
     "## Deterministic Module:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ca89690",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import create_basic_network as cbn\n",
-    "from pp_simu import hc_deterministic, addEV_det, addPV_det"
    ]
   },
   {
