--- a/notebooks/906_bus.ipynb
+++ b/notebooks/906_bus.ipynb
@@ -3433,7 +3433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "65397295",
    "metadata": {},
    "outputs": [
@@ -3458,59 +3458,107 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>bus</th>\n",
-       "      <th>vm_pu</th>\n",
-       "      <th>va_degree</th>\n",
-       "      <th>slack_weight</th>\n",
-       "      <th>in_service</th>\n",
-       "      <th>controllable</th>\n",
-       "      <th>roxo_min</th>\n",
-       "      <th>x0x_min</th>\n",
-       "      <th>x0x_max</th>\n",
-       "      <th>r0x0_max</th>\n",
-       "      <th>s_sc_max_mva</th>\n",
-       "      <th>rx_min</th>\n",
-       "      <th>rx_max</th>\n",
+       "      <th>vm_a_pu</th>\n",
+       "      <th>vm_b_pu</th>\n",
+       "      <th>vm_c_pu</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>None</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.05</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>57.157677</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>1.050026</td>\n",
+       "      <td>1.049986</td>\n",
+       "      <td>1.049989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.153641</td>\n",
+       "      <td>0.878572</td>\n",
+       "      <td>1.138388</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.153038</td>\n",
+       "      <td>0.877623</td>\n",
+       "      <td>1.138362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.152980</td>\n",
+       "      <td>0.877623</td>\n",
+       "      <td>1.138362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.152774</td>\n",
+       "      <td>0.877063</td>\n",
+       "      <td>1.138327</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>1.151173</td>\n",
+       "      <td>0.874052</td>\n",
+       "      <td>1.138232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>1.150765</td>\n",
+       "      <td>0.873638</td>\n",
+       "      <td>1.138286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>1.150976</td>\n",
+       "      <td>0.873450</td>\n",
+       "      <td>1.138310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>1.151168</td>\n",
+       "      <td>0.874052</td>\n",
+       "      <td>1.138232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>1.150830</td>\n",
+       "      <td>0.873639</td>\n",
+       "      <td>1.138288</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>117 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   name  bus  vm_pu  va_degree  slack_weight  in_service  controllable  \\\n",
-       "0  None    0   1.05        0.0           1.0        True         False   \n",
+       "      vm_a_pu   vm_b_pu   vm_c_pu\n",
+       "0    1.050026  1.049986  1.049989\n",
+       "1    1.153641  0.878572  1.138388\n",
+       "2    1.153038  0.877623  1.138362\n",
+       "3    1.152980  0.877623  1.138362\n",
+       "4    1.152774  0.877063  1.138327\n",
+       "..        ...       ...       ...\n",
+       "112  1.151173  0.874052  1.138232\n",
+       "113  1.150765  0.873638  1.138286\n",
+       "114  1.150976  0.873450  1.138310\n",
+       "115  1.151168  0.874052  1.138232\n",
+       "116  1.150830  0.873639  1.138288\n",
        "\n",
-       "   roxo_min  x0x_min  x0x_max  r0x0_max  s_sc_max_mva  rx_min  rx_max  \n",
-       "0       0.1      1.0      1.0       0.1     57.157677     0.1     0.1  "
+       "[117 rows x 3 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "net.ext_grid"
+    "net.res_bus_3ph[['vm_a_pu', 'vm_b_pu', 'vm_c_pu']]"
    ]
   },
   {
