fix: pp_simu.py

--- a/notebooks/probabilistic_HC.ipynb
+++ b/notebooks/probabilistic_HC.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "eb233ea8",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
        "[10 rows x 110 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,9 +462,77 @@
    "source": [
     "net = from_json(os.path.join(main_dir, 'json_networks', 'full_load_network.json'))\n",
     "print(net)\n",
+    "net.res_bus_3ph[['vm_a_pu', 'vm_b_pu', 'vm_c_pu']].describe().to_csv(os.path.join(data_dir, 'full_net.res_bus_3ph_describe.csv'))\n",
     "\n",
     "profile_df, ds = cbn.create_data_source(data_dir)\n",
     "ds.df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4ccd6779",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_path = os.path.join(main_dir, 'hc_results', 'STO')\n",
+    "os.makedirs(output_path) if not os.path.exists(output_path) else None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "620af944",
+   "metadata": {},
+   "source": [
+    "### 1. PV-only scenario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f7e2e98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pv_summary = pp_simu.hc_montecarlo(net, ds, output_path, max_iteration=1000, add_kw=1.0, max_kw=30.0, pv=True, ev=False)\n",
+    "pv_summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9df7e571",
+   "metadata": {},
+   "source": [
+    "### 2. EV-only scenario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fe7de50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ev_summary = pp_simu.hc_montecarlo(net, ds, output_path, iteration=1000, add_kw=1.0, max_kw=30.0, pv=False, ev=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8695ef7c",
+   "metadata": {},
+   "source": [
+    "### 3. PV+EV scenario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "210be8b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pvev_summary = pp_simu.hc_montecarlo(net, ds, output_path, iteration=1000, add_kw=1.0, max_kw=30.0, pv=True, ev=True)\n",
+    "pvev_summary"
    ]
   }
  ],
