fix: bus_indices

--- a/notebooks/probabilistic_HC.ipynb
+++ b/notebooks/probabilistic_HC.ipynb
@@ -36,7 +36,7 @@
     "net.res_bus_3ph[['vm_a_pu', 'vm_b_pu', 'vm_c_pu']].describe().to_csv(os.path.join(data_dir, 'full_net.res_bus_3ph_describe.csv'))\n",
     "\n",
     "profile_df, ds = cbn.create_data_source(data_dir)\n",
-    "ds.df.head(10)"
+    "# ds.df.head(10)"
    ]
   },
   {
